--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -109,7 +109,11 @@
           {%- form 'product', product, is: 'product-form', id: form_id, class: 'product-item__quick-form' -%}
             <input type="hidden" name="quantity" value="1">
             <input type="hidden" name="id" value="{{ product.first_available_variant.id }}">
-            
+            <button is="loader-button" type="submit" class="button button--outline button--text button--full {% if section.settings.desktop_products_per_row >= 5 %}button--small{% endif %} hidden-touch">{{ 'collection.product.add_to_cart_short' | t }}</button>
+            <button type="submit" class="product-item__quick-buy-button hidden-no-touch">
+              <span class="visually-hidden">{{ 'collection.product.add_to_cart_short' | t }}</span>
+              {%- render 'icon' with quick_buy_icon_name -%}
+            </button>
           {%- endform -%}
         {%- else -%}
           {%- comment -%}
@@ -132,7 +136,8 @@
           <quick-buy-popover id="product-{{ section.id }}-{{ block.id }}-{{ product.id }}-popover" href="{{ product.url }}{% if product_url_contains_query %}&{% else %}?{% endif %}view=quick-buy-popover" class="popover popover--quick-buy hidden-tablet-and-up"></quick-buy-popover>
           <quick-buy-drawer id="product-{{ section.id }}-{{ block.id }}-{{ product.id }}-drawer" href="{{ product.url }}{% if product_url_contains_query %}&{% else %}?{% endif %}view=quick-buy-drawer" class="drawer drawer--large drawer--quick-buy hidden-phone"></quick-buy-drawer>
         {%- endif -%}
-        
+      {% else %}
+        <a href="{{ product.url }}" is="toggle-button" loader aria-controls="product-{{ section.id }}-{{ block.id }}-{{ product.id }}-drawer" aria-expanded="false" class="button button--outline button--text button--full {% if section.settings.desktop_products_per_row >= 5 %}button--small{% endif %} hidden-touch hidden-phone">{{ 'collection.product.quick_view' | t }}</a>
       {% endif %}
     {%- endif -%}
   </div>
@@ -151,8 +156,6 @@
       {%- endif -%}
 
       <a href="{{ product.url }}" class="product-item-meta__title">{{ product.title }}</a>
-
-      
 
       {% if customer %}
         <div class="product-item-meta__price-list-container">
@@ -327,9 +330,7 @@
             {%- form 'product', product, is: 'product-form', id: form_id -%}
               <input type="hidden" name="quantity" value="1">
               <input type="hidden" name="id" value="{{ product.first_available_variant.id }}">
-            {% comment %}
               <button type="submit" {% if show_cta %}is="loader-button"{% endif %} class="{% if reduced_content %}product-item__link link text--subdued{% else %}product-item__cta button button--primary{% endif %}">{{ 'collection.product.add_to_cart_short' | t }}</button>
-            {% endcomment %}
             {%- endform -%}
           {%- else -%}
             <button type="button" {% if show_cta %}loader{% endif %} is="toggle-button" aria-controls="product-{{ section.id }}-{{ block.id }}-{{ product.id }}-drawer" aria-expanded="false" class="{% if reduced_content %}product-item__link link text--subdued{% else %}product-item__cta button button--primary{% endif %} hidden-phone">{{ 'collection.product.quick_view' | t }}</button>
@@ -344,15 +345,12 @@
           <span class="product-item__link text--subdued">{{ 'collection.product.sold_out' | t }}</span>
         </div>
       {% else %}
-        {% comment %}
-          <a href="https://obsequ.myshopify.com/en/account/login" {% if show_cta %}is="loader-button"{% endif %} class="{% if reduced_content %}product-item__link link text--subdued{% else %}product-item__cta button button--primary{% endif %}">{{ 'collection.product.add_to_cart_short' | t }}</a>
-        {% endcomment %}
+        <a href="https://obsequ.myshopify.com/en/account/login" {% if show_cta %}is="loader-button"{% endif %} class="{% if reduced_content %}product-item__link link text--subdued{% else %}product-item__cta button button--primary{% endif %}">{{ 'collection.product.add_to_cart_short' | t }}</a>
       {% endif %}
     {%- endif -%}
 
 
     {% if product.available %}
-      <a href="{{ product.url }}" is="toggle-button" loader aria-controls="product-{{ section.id }}-{{ block.id }}-{{ product.id }}-drawer" aria-expanded="false" style="text-transform: uppercase; margin-top: 30px" class="button button--outline button--text button--full {% if section.settings.desktop_products_per_row >= 5 %}button--small{% endif %} hidden-touch hidden-phone">In den Warenkorb</a>
     {% else %}
       <button class="product-item__cta button button--primary">Ausverkauft</button>
     {% endif %}
